--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,42 @@
 alembic==1.5.8
+aniso8601==9.0.1
+atomicwrites==1.4.0
+attrs==20.3.0
 cffi==1.14.5
 click==7.1.2
+colorama==0.4.4
+coverage==5.5
 cryptography==3.4.7
 Flask==1.1.2
 Flask-Migrate==2.7.0
+Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
+flask-swagger-ui==3.36.0
 greenlet==1.0.0
 gunicorn==20.1.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+marshmallow==3.11.1
+marshmallow-sqlalchemy==0.24.3
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
+packaging==20.9
+pluggy==0.13.1
 protobuf==3.15.8
+py==1.10.0
 pycparser==2.20
+PyJWT==2.0.1
 PyMySQL==1.0.2
+pyparsing==2.4.7
+pytest==6.2.3
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2021.1
 six==1.15.0
 SQLAlchemy==1.4.8
+toml==0.10.2
 Werkzeug==1.0.1
