--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coverage==5.5
 cryptography==3.4.7
 Flask==1.1.2
 Flask-Migrate==2.7.0
+Flask-MySQL==1.5.2
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
