--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 coverage==5.5
+coveralls==3.1.0
 cryptography==3.4.7
+docopt==0.6.2
 Faker==8.2.0
 Flask==1.1.2
 Flask-Migrate==2.7.0
