--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: python
 python:
   - "3.8"
+services:
+  - mysql
 
 before_install:
   - pip install virtualenv
   - pip install pycodestyle
   - python -m pip install -r requirements.txt
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS finalproject;'
 
 script:
   - python -m pytest tests/
