--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-MySQL==1.5.2
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
+flask-swagger==0.2.14
 flask-swagger-ui==3.36.0
 greenlet==1.0.0
 gunicorn==20.1.0
@@ -44,6 +45,7 @@ pytest-cov==2.12.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.4.8
